--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -18,3 +18,5 @@
 @import "partials/reviews";
 @import "partials/prices";
 @import "partials/usluga";
+@import "partials/patients";
+@import "partials/main-adaptive";
