--- a/src/style/partials/contacts.scss
+++ b/src/style/partials/contacts.scss
@@ -23,6 +23,7 @@
             right: 32px;
             top: 50%;
             margin-top: -7px;
+            transition-duration: .2s;
         }
 
         &--1{background-color: #6C2A81}
