--- a/src/style/partials/main.scss
+++ b/src/style/partials/main.scss
@@ -166,7 +166,7 @@ body {
 		align-items: center;
 		color: #FFFFFF;
 		padding: 10px 50px 10px 16px;
-		margin: 0 12px;
+		margin: 0 12px 12px;
 		border-radius: 7px;
 		transition: 0.3s;
 		opacity: 0.3;
