--- a/src/style/partials/usluga.scss
+++ b/src/style/partials/usluga.scss
@@ -108,15 +108,15 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	box-sizing: border-box;
 	width: calc(33.33% - 32px);
 	margin: 0 16px 32px;
-	background: #ffffff;
 	padding: 39px 10px 40px;
-	box-sizing: border-box;
+	background: #ffffff;
 
 	.up-p__logo {
-		height: 56px;
 		width: auto;
+		height: 56px;
 	}
 }
 
@@ -153,12 +153,12 @@
 }
 
 .up-p__btn {
-	margin-top: 35px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	box-sizing: border-box;
 	max-width: 100%;
+	margin-top: 35px;
 	padding: 11px 31px;
 	cursor: pointer;
 	transition-duration: .2s;
@@ -183,24 +183,24 @@
 }
 
 .usp-doc-sub-t {
-	margin-top: 46px;
 	width: 787px;
 	max-width: 100%;
-	font-weight: 500;
-	font-size: 20px;
-	line-height: 160%;
+	margin-top: 46px;
 	color: #13070C;
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 160%;
 }
 
 .usp-doc-sub-text {
-	margin-top: 14px;
 	width: 878px;
 	max-width: 100%;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 16px;
-	line-height: 150%;
+	margin-top: 14px;
 	color: #13070C;
+	font-size: 16px;
+	font-weight: normal;
+	font-style: normal;
+	line-height: 150%;
 
 	p {}
 }
@@ -210,25 +210,24 @@
 }
 
 .dreviews__more--hidden {
-	opacity: 0;
 	pointer-events: none;
+	opacity: 0;
 }
-
 
 .section-quality-sert {}
 
 .quality-sert {
 	display: flex;
 	align-items: center;
-	padding: 36px 25px 30px 45px;
-	margin-top: 63px;
 	box-sizing: border-box;
-	background: #ffffff;
+	margin-top: 63px;
+	padding: 36px 25px 30px 45px;
 	border-bottom: 10px solid #C31D1F;
+	background: #ffffff;
 
 	&__pic {
-		min-width: 88px;
 		width: 88px;
+		min-width: 88px;
 
 		img {
 			width: 88px;
@@ -237,55 +236,354 @@
 	}
 
 	&__text {
-		margin-left: 32px;
-		border-left: 1px solid #C9C1C4;
-		padding-left: 32px;
-		font-style: normal;
-		font-weight: 600;
-		font-size: 20px;
-		line-height: 150%;
-		width: 748px;
 		box-sizing: border-box;
+		width: 748px;
 		max-width: 100%;
+		margin-left: 32px;
+		padding-left: 32px;
+		border-left: 1px solid #C9C1C4;
+		font-size: 20px;
+		font-weight: 600;
+		font-style: normal;
+		line-height: 150%;
 	}
 }
-
 
 .section-usl-advantages {}
 
 .usl-advantages {
 	display: flex;
-	justify-content: space-between;
 	flex-wrap: wrap;
-	margin-bottom: -30px;
+	justify-content: space-between;
 	margin-top: 50px;
+	margin-bottom: -30px;
 }
 
 .usl-advantage {
-	padding-left: 61px;
 	position: relative;
-	font-weight: 500;
-	font-size: 20px;
-	line-height: 150%;
-	width: calc(50% - 29px);
 	box-sizing: border-box;
+	width: calc(50% - 29px);
 	margin-bottom: 30px;
-	/* or 30px */
-
-
-	/* Main font */
-
+	padding-left: 61px;
 	color: #13070C;
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 150%;
 
 	&::before {
 		position: absolute;
-		left: 0;
 		top: 0;
-		content: '';
+		left: 0;
 		display: block;
 		width: 37px;
-		height: 37px;
 		min-width: 37px;
+		height: 37px;
+		content: '';
 		background: url(../img/advantage.svg) no-repeat center center;
 	}
 }
+
+.history__left {
+	max-width: calc(100% - 363px);
+}
+
+.history__right {
+	min-width: 363px;
+}
+
+.history__slider--reverse-pos {
+	.history__item {
+		display: flex;
+		flex-direction: row-reverse;
+	}
+
+	.history__left {
+		padding-top: 45px;
+		padding-bottom: 137px;
+	}
+}
+
+.hs-control {
+	max-width: calc(100% - 459px);
+}
+
+.hs-control--reverse-pos {
+	bottom: 38px;
+	left: 411px;
+	max-width: calc(100% - 459px);
+}
+
+.history__right--stages {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 55px 27px 51px 48px;
+	background: #C31D1F;
+}
+
+.history-right__stage {
+	flex-grow: 1;
+	color: #FFFFFF;
+	font-size: 16px;
+	font-weight: 500;
+	font-style: normal;
+	line-height: 135%;
+}
+
+.history-right__title {
+	flex-grow: 2.4;
+	color: #FFFFFF;
+	font-size: 30px;
+	font-weight: 500;
+	line-height: 135%;
+
+	br {}
+}
+
+.history-right__info {
+	color: #FFFFFF;
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 135%;
+
+	br {}
+}
+
+.histories--usl {
+	margin-top: -11px;
+}
+
+.section-useful-information {
+	margin-top: 72px;
+}
+
+.useful-information {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 41px -16px -32px;
+}
+
+.use-inf-video {
+	margin: 0 16px 32px;
+	display: block;
+	width: 436px;
+	max-width: calc(50% - 36px);
+	position: relative;
+	transition-duration: .2s;
+
+	&::before {
+		content: '';
+		display: block;
+		padding-top: 76.8348623853%;
+	}
+
+	&::after {
+		content: '';
+		display: block;
+		background: url(../img/play.svg) no-repeat center center;
+		background-size: contain;
+		width: 106px;
+		height: 106px;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	&__pic {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center center;
+	}
+
+	&:hover {
+		opacity: .8;
+	}
+
+	&:hover {}
+
+	&:active {}
+
+	&:focus {}
+}
+
+.accordion__title--serv {
+
+	background: #F3EBE0;
+	color: #000000;
+
+	&::after {
+		background-image: url(../img/arrow_down_b.svg);
+	}
+
+	&.active {
+		background: #C31D1F;
+		color: #ffffff;
+
+		&::after {
+			background-image: url(../img/arrow_down_w.svg);
+		}
+	}
+}
+
+
+.accordion__content--serv {
+	background: #ffffff;
+	padding: 32px 48px 53px;
+
+}
+
+
+.serv-text-type {
+
+	h2,
+	h3 {
+		font-style: normal;
+		font-weight: 600;
+		font-size: 20px;
+		line-height: 150%;
+		color: #13070C;
+	}
+
+	h2 {
+		font-size: 25px;
+	}
+
+	img {
+		max-width: 100%;
+		display: block;
+		height: auto;
+
+		&:not(:first-child) {
+			margin-top: 15px;
+		}
+
+		/*&+img,&+p,&+ul,&+ol{
+			margin-top: 15px;
+		}*/
+	}
+
+	p {
+		width: 825px;
+		max-width: 100%;
+		margin-top: 23px;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 16px;
+		line-height: 150%;
+		color: #13070C;
+
+		&+p {
+			margin-top: 8px;
+		}
+	}
+
+	ul,
+	ol {
+		margin-top: 8px;
+		list-style: none;
+
+		li {
+			list-style: none;
+			position: relative;
+			padding-left: 48px;
+			font-weight: 500;
+			font-size: 16px;
+			line-height: 200%;
+			color: #13070C;
+
+			&::before {
+				position: absolute;
+				left: 24px;
+				top: 0;
+			}
+		}
+	}
+
+	ol {
+		counter-reset: serv-text-type-ol;
+
+		li {
+			list-style: none;
+
+			font-weight: 500;
+			font-size: 16px;
+			line-height: 200%;
+			color: #13070C;
+
+			&::before {
+				text-align: center;
+				counter-increment: serv-text-type-ol;
+				content: counter(serv-text-type-ol);
+			}
+		}
+	}
+
+	ul {
+		li {
+			&::before {
+				top: 13px;
+				content: '';
+				width: 8px;
+				height: 8px;
+				background: #C31D1F;
+				border-radius: 50%;
+			}
+		}
+	}
+}
+
+
+.sec-more-articles {}
+
+.more-articles {
+	margin-top: 50px;
+}
+
+.more-articles-item {
+	display: block;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 1.3;
+	transition-duration: .2s;
+	color: #615756;
+	text-decoration: underline;
+
+	&+.more-articles-item {
+		margin-top: 15px;
+
+	}
+
+	&:hover {
+		text-decoration: none;
+		color: #C31D1F;
+	}
+
+	&:active {}
+
+	&:focus {}
+}
+
+.more-articles__link-all {
+	font-style: normal;
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 160%;
+	text-decoration-line: underline;
+	color: #C31D1F;
+	margin-top: 33px;
+	display: block;
+
+	&:hover {
+		text-decoration-line: none;
+	}
+
+}
+
