--- a/src/style/partials/contacts.scss
+++ b/src/style/partials/contacts.scss
@@ -61,6 +61,7 @@
             }
             .map__right{
                 width: 417px;
+                max-width: 100%;
             }
             .map__left{
                 width: calc(100% - 417px);
