--- a/src/views/doctor.pug
+++ b/src/views/doctor.pug
@@ -10,7 +10,7 @@ block vars
 
 
 block main
-    .doctor-page.dp
+    .doctor-page.dp.page__pad.bg-white
         section.dp__first
             .container.container--mini
                 include partials/_breadcrumbs
