--- a/src/style/partials/doctors.scss
+++ b/src/style/partials/doctors.scss
@@ -3,12 +3,12 @@
         margin-top: 40px;
         display: flex;
         flex-wrap: wrap;
-        margin-left: -16px;
-        margin-right: -16px;
+        margin-left: -15px;
+        margin-right: -15px;
     }
     &__block{
-        padding: 0 16px;
-        margin-bottom: 32px;
+        padding: 0 15px;
+        margin-bottom: 30px;
         width: 20%;
         flex: 0 0 20%;
         box-sizing: border-box;
@@ -51,13 +51,13 @@
     &__items{
         display: flex;
         flex-wrap: wrap;
-        margin-left: -16px;
-        margin-right: -16px;
+        margin-left: -15px;
+        margin-right: -15px;
     }
     &__item{
         width: 20%;
         flex: 0 0 20%;
-        padding: 0 16px;
+        padding: 0 15px;
         margin-top: 32px;
         box-sizing: border-box;
         a{
@@ -82,13 +82,13 @@
 
 .dp{
     &__first{
-        padding: 72px 0;
         background: #ffffff;
     }
     &__doctor{
         display: flex;
     }
     &__avatar{
+        max-width: 36%;
         width: 319px;
         margin-right: 40px;
         div{
@@ -194,18 +194,18 @@
 
 .serts{
     &__items{
-        margin-top: 16px;
+        margin-top: 15px;
         display: flex;
         flex-wrap: wrap;
-        margin-left: -16px;
-        margin-right: -16px;
+        margin-left: -15px;
+        margin-right: -15px;
     }
     &__block{
-        padding: 0 16px;
+        padding: 0 15px;
         width: 33.3333%;
         flex: 0 0 33.3333%;
         box-sizing: border-box;
-        margin-top: 32px;
+        margin-top: 30px;
     }
     &__item{
         width: 100%;
