--- a/src/style/partials/prices.scss
+++ b/src/style/partials/prices.scss
@@ -57,6 +57,8 @@
         padding-bottom: 12px;
         padding-top: 12px;
         border-bottom: 1px solid #E3DDDF;
+        padding-right: 5px;
+        padding-left: 5px;
         &:first-child{
             width: 40px;
             padding-right: 5px;
