--- a/src/views/text.pug
+++ b/src/views/text.pug
@@ -10,7 +10,7 @@ block vars
 
 
 block main
-	.patient-page
+	.patient-page.page__pad
 		section.dp__first.bg-lg
 			.container.container--mini
 				h1.h2 Политика конфиденциальности
@@ -20,6 +20,11 @@ block main
 					p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est.
 					p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
 					ul
+						li Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita delectus eius accusamus corporis ea minima.
+						li Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita delectus eius accusamus corporis ea minima.
+						li Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita delectus eius accusamus corporis ea minima.
+
+					ol
 						li Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita delectus eius accusamus corporis ea minima.
 						li Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita delectus eius accusamus corporis ea minima.
 						li Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita delectus eius accusamus corporis ea minima.
