--- a/src/views/partials/_header.pug
+++ b/src/views/partials/_header.pug
@@ -155,7 +155,7 @@ header.header
 					img(src="img/soc-fb.svg", alt="")
 
 			.header-offer-info
-				a.header-offer-info__link(href="") Запись на прием
+				a.header-offer-info__link(href="call-appointment-modal-tech") Запись на прием
 				.header-offer-info__desc 5% скидка при записи онлайн
 
 .header-offer-info.header-offer-info--mob
