--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,6 +2,7 @@
 @import "partials/fonts.css";
 @import "partials/jquery.fancybox.min.css";
 @import "partials/slick.css";
+@import "partials/nice-select.css";
 
 /* my style */
 
