--- a/src/style/partials/main.scss
+++ b/src/style/partials/main.scss
@@ -11,6 +11,7 @@ body {
 input,
 button {
 	-webkit-appearance: none;
+	appearance: none;
 }
 
 input,
@@ -23,6 +24,7 @@ textarea {
 	border: 0;
 	border-radius: 0;
 	outline: 0;
+	font-family: $ffg;
 }
 
 body {
@@ -63,6 +65,7 @@ body {
 
 	&--mini {
 		width: 1021px;
+
 		@media (min-width:1700px) {
 			padding-right: 242px !important;
 			width: 1263px !important;
@@ -87,25 +90,28 @@ body {
 	display: none;
 }
 
-.ta-center{
+.ta-center {
 	text-align: center;
 }
-.s-pad{
+
+.s-pad {
 	padding: 64px 0 72px;
-	&--top{
+
+	&--top {
 		padding-top: 72px;
 	}
-	&--bottom{
+
+	&--bottom {
 		padding-bottom: 104px;
 	}
 }
 
 
-.page__pad{
+.page__pad {
 	padding: 72px 0 104px;
 }
 
-.btn{
+.btn {
 	display: inline-block;
 	background: #C31D1F;
 	text-decoration: none;
@@ -116,20 +122,23 @@ body {
 	border: none;
 	padding: 10px 32px;
 	transition: 0.3s;
-	&:hover{
+
+	&:hover {
 		background: #13070c;
 	}
 }
 
-.breadcrumbs{
+.breadcrumbs {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
 	margin-bottom: 32px;
-	&:not(:first-child){
+
+	&:not(:first-child) {
 		margin-top: 24px;
 	}
-	&__sep{
+
+	&__sep {
 		width: 17px;
 		height: 8px;
 		display: block;
@@ -137,30 +146,33 @@ body {
 		background-size: contain;
 		margin: 0 9px;
 	}
-	&__link{
+
+	&__link {
 		font-size: 16px;
 		line-height: 160%;
 		color: #13070C;
 		text-decoration: none;
-		&:hover{
+
+		&:hover {
 			color: #c31d1f;
 		}
-		&:last-child{
+
+		&:last-child {
 			color: #878183;
 		}
 	}
 }
 
-.tabs{
+.tabs {
 	display: flex;
 	margin-left: -12px;
 	margin-right: -12px;
 
-	&--center{
+	&--center {
 		justify-content: center;
 	}
 
-	&__filter{
+	&__filter {
 		font-size: 16px;
 		display: flex;
 		align-items: center;
@@ -172,7 +184,7 @@ body {
 		opacity: 0.3;
 		position: relative;
 
-		&::before{
+		&::before {
 			content: "";
 			display: block;
 			width: 18px;
@@ -186,7 +198,7 @@ body {
 			z-index: 1;
 		}
 
-		&::after{
+		&::after {
 			content: "";
 			display: block;
 			width: 18px;
@@ -201,36 +213,53 @@ body {
 			transition: 0.3s;
 		}
 
-		&:hover{
+		&:hover {
 			opacity: 1;
 		}
-		&.active{
+
+		&.active {
 			opacity: 1;
-			&::after{
+
+			&::after {
 				transform: translateY(-50%) scale(0.33);
 			}
 		}
 
-		&:nth-child(1){
+		&:nth-child(1) {
 			background-color: #C31D1F;
-			&::after{background-color: #C31D1F;}
+
+			&::after {
+				background-color: #C31D1F;
+			}
 		}
-		&:nth-child(2){
+
+		&:nth-child(2) {
 			background-color: #6C2A81;
-			&::after{background-color: #6C2A81;}
+
+			&::after {
+				background-color: #6C2A81;
+			}
 		}
-		&:nth-child(3){
+
+		&:nth-child(3) {
 			background-color: #E01A4D;
-			&::after{background-color: #E01A4D;}
+
+			&::after {
+				background-color: #E01A4D;
+			}
 		}
-		&:nth-child(4){
+
+		&:nth-child(4) {
 			background-color: #1B73B2;
-			&::after{background-color: #1B73B2;}
+
+			&::after {
+				background-color: #1B73B2;
+			}
 		}
 	}
 }
 
-.page__intro{
+.page__intro {
 	max-width: 670px;
 	font-weight: 500;
 	font-size: 20px;
@@ -239,23 +268,288 @@ body {
 	margin-bottom: 48px;
 }
 
-.hidden{
+.hidden {
 	display: none !important;
 }
 
-.mt20{
+.mt20 {
 	margin-top: 20px;
 }
-.mt10{
+
+.mt10 {
 	margin-top: 10px;
 }
-.mt5{
+
+.mt5 {
 	margin-top: 5px;
 }
 
-.tabs__filter.active{
+.tabs__filter.active {
 	pointer-events: none;
 }
-.bg-white{
+
+.bg-white {
 	background: #ffffff;
+}
+
+body.compensate-for-scrollbar {
+	overflow: hidden;
+}
+
+.nice-select .option.disabled {
+	display: none;
+}
+
+
+.appointment-modal {
+	width: 521px;
+	max-width: 100%;
+	padding: 56px 56px 72px;
+	box-sizing: border-box;
+	background: #F5F3F1;
+	display: none;
+}
+
+.form-appointment {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.form-app-title {
+	font-family: $ffc;
+	font-style: normal;
+	font-weight: 300;
+	font-size: 40px;
+	line-height: 125%;
+	text-align: center;
+	padding-bottom: 63px;
+	color: #13070C;
+
+	&::after {
+		margin-top: 37px;
+		content: '';
+		display: block;
+		width: 100%;
+		height: 16px;
+		background: url(../img/modal-art.svg) no-repeat center center;
+		background-size: contain;
+	}
+}
+
+.form-app-main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+}
+
+.nice-select.custom-select {
+	height: 48px;
+	width: 100%;
+	border: 1px solid #DED8D2;
+	box-sizing: border-box;
+	background: none;
+	border-radius: 0;
+	float: none;
+	padding-left: 24px;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	font-family: Gilroy;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 1;
+
+	.current {}
+
+	.list {
+		width: 100%;
+	}
+
+	.option.selected.disabled {}
+
+	.option {}
+}
+
+.inp-row {
+	display: block;
+	width: 100%;
+
+	&+.inp-row {
+		margin-top: 24px;
+	}
+}
+
+.custom-inp {
+	display: block;
+	width: 100%;
+	border: 1px solid #DED8D2;
+	box-sizing: border-box;
+
+	font-family: Gilroy;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 1;
+	display: flex;
+	align-items: center;
+	box-sizing: border-box;
+	padding: 13px 24px;
+
+	color: #13070C;
+	transition: .2s;
+
+	&::placeholder {
+		color: #878183;
+	}
+
+	&:focus {
+		border: 1px solid #95897D;
+	}
+}
+
+textarea.custom-inp {
+	box-sizing: border-box;
+	max-height: 400px;
+	/* optional, but recommended */
+	min-height: 104px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	resize: none;
+	line-height: 20px;
+}
+
+.wpcf7-acceptance {
+	width: 100%;
+	display: flex;
+
+}
+
+.wpcf7-list-item {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+
+	label {
+		cursor: pointer;
+		display: block;
+
+		.custom-chb {
+			&+span {}
+		}
+
+		.wpcf7-list-item-label {}
+
+
+	}
+}
+
+.custom-chb {
+	&+span {
+		display: flex;
+		justify-content: center;
+		position: relative;
+		padding-left: 26px;
+
+		&::before {
+			position: absolute;
+			left: 0;
+			top: -3PX;
+			content: '';
+			display: block;
+			border-radius: 50%;
+			width: 18px;
+			height: 18px;
+
+			background: #FFFFFF;
+			/* stroke */
+
+			border: 1px solid #DED8D2;
+			box-sizing: border-box;
+			box-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.2);
+		}
+
+		&::after {
+			content: '';
+			display: block;
+			border-radius: 50%;
+			position: absolute;
+			left: 6px;
+			top: 3px;
+
+			width: 6px;
+			height: 6px;
+			background: #C31D1F;
+			opacity: 0;
+			transition-duration: .2s;
+		}
+	}
+
+	&:checked {
+		&+span {
+			&::after {
+				opacity: 1;
+			}
+		}
+	}
+}
+
+label {
+	display: block;
+
+	.custom-chb {
+		&+span {}
+	}
+
+	.wpcf7-list-item-label {}
+
+
+}
+
+.acceptance-text {
+	font-style: normal;
+	font-weight: normal;
+	font-size: 13px;
+	line-height: 11px;
+	/* or 85% */
+
+
+	/* основной темный */
+
+	color: #2A2D34;
+
+	a {
+		color: #c31d1f;
+		text-decoration: underline;
+
+		&:hover {
+			text-decoration: none;
+		}
+
+		&:active {}
+
+		&:focus {}
+	}
+}
+
+.btn-send-appointment {
+	cursor: pointer;
+	margin-top: 41px;
+	padding: 15px 32px;
+}
+
+.fancybox-slide--html .fancybox-close-small {
+	color: currentColor;
+	padding: 0;
+	height: 51px;
+	width: 46px;
+	right: 3px;
+	top: 2px;
+
+	path {
+
+		fill: #878183;
+	}
 }
